--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    {{{body}}}
-  </body>
+    <head>
+        <title>{{title}}</title>
+        <link rel='stylesheet' href='/css/style.css' />
+    </head>
+    <body>
+        {{{body}}}
+    </body>
 </html>
