Add partial support for hbs.

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,6 +5,7 @@
         <link rel='stylesheet' href='/css/style.css' />
     </head>
     <body>
+       {{> header }} 
         {{{body}}}
     </body>
 </html>
