--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,6 @@
 body {
-    padding: 50px;
-    font: 14px 'Lucida Grande', Helvetica, Arial, sans-serif;
-}
+  padding: 50px;
+  font: 14px 'Lucida Grande', Helvetica, Arial, sans-serif; }
 
 a {
-    color: #00b7ff;
-}
+  color: #00b7ff; }
