--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,12 @@
-<h1>{{ title }}</h1>
-<p>Welcome to {{ title }}</p>
+<div class="container index-container text-center">
+    <img class="body-logo" src="http://christopherlis.com/img/cc-voyager-logo-small.svg" alt="Chris Courses' Voyager Logo">
+    
+    <h1>{{ title }}</h1>
+    <p>A Node.js Web-app Framework</p>
+
+    <nav class="index-nav">
+        <a href="https://github.com/chriscourses/voyager" target="_blank">Git Repo</a>
+        <a href="http://voyager.chriscourses.com/" target="_blank">Docs</a>
+        <a href="http://chriscourses.com/" target="_blank">Free Learning Videos</a>
+    </nav>
+</div>
