--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,8 +1,24 @@
+@import url('https://fonts.googleapis.com/css?family=Lato:300,700');
+
+// Global
+@import './global/_variables';
+@import './global/layout';
+
+// Partials
+@import './partials/header';
+@import './partials/footer';
+
+// Pages
+@import './pages/index';
+
 body {
-    padding: 50px;
-    font: 14px 'Lucida Grande', Helvetica, Arial, sans-serif;
+    margin: 0;
+    font-size: 14px;
+    font-family: $lato;
+    color: #333;
 }
 
 a {
     color: #00b7ff;
+    text-decoration: none;
 }
