--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,6 +1,6 @@
 <header>
     <div class="container header-container">
-        <img class="header-logo" src="http://christopherlis.com/img/cc-voyager-logo-small.svg" alt="Chris Courses' Voyager Logo">
+        <a href="/"><img class="header-logo" src="http://christopherlis.com/img/cc-voyager-logo-small.svg" alt="Chris Courses' Voyager Logo"></a>
         <nav class="header-nav">
             <a href="/">Home</a>
             {{!-- <a>Login</a> --}}
