--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,7 +2,7 @@
 
 // Global
 @import './global/_variables';
-@import './global/util'
+@import './global/util';
 
 // Partials
 @import './partials/header';
