--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,8 +1,5 @@
 <div class="container index-container text-center">
-    <img class="body-logo" src="http://christopherlis.com/img/cc-voyager-logo-small.svg" alt="Chris Courses' Voyager Logo">
-    
-    <h1>{{ title }}</h1>
-    <p>A Node.js Web-app Framework</p>
+    <img class="body-logo" src="img/cc-voyager.svg" alt="Chris Courses' Voyager Logo">
 
     <nav class="index-nav">
         <a href="https://github.com/chriscourses/voyager" target="_blank">Git Repo</a>
