--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,9 +1,8 @@
 <header>
     <div class="container header-container">
-        <a href="/"><img class="header-logo" src="http://christopherlis.com/img/cc-voyager-logo-small.svg" alt="Chris Courses' Voyager Logo"></a>
+        <a href="/"><img class="header-logo" src="img/cc-voyager-logo.svg" alt="Chris Courses' Voyager Logo"></a>
         <nav class="header-nav">
             <a href="/">Home</a>
-            {{!-- <a>Login</a> --}}
         </nav>
     </div>
 </header>
