--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,13 +1,334 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:300,700);.container {
-  max-width: 1170px;
-  margin: 0 auto; }
+/* latin-ext */
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  src: local("Lato Light"), local("Lato-Light"), url(https://fonts.gstatic.com/s/lato/v14/S6u9w4BMUTPHh7USSwaPGQ3q5d0N7w.woff2) format("woff2");
+  unicode-range: U+0100-024f, U+0259, U+1-1eff, U+2020, U+20a0-20ab, U+20ad-20cf, U+2113, U+2c60-2c7f, U+A720-A7FF; }
 
-.text-center {
-  text-align: center; }
+/* latin */
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  src: local("Lato Light"), local("Lato-Light"), url(https://fonts.gstatic.com/s/lato/v14/S6u9w4BMUTPHh7USSwiPGQ3q5d0.woff2) format("woff2");
+  unicode-range: U+0000-00ff, U+0131, U+0152-0153, U+02bb-02bc, U+02c6, U+02da, U+02dc, U+2000-206f, U+2074, U+20ac, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD; }
+
+/* cyrillic-ext */
+@font-face {
+  font-family: 'Roboto Mono';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Roboto Mono"), local("RobotoMono-Regular"), url(https://fonts.gstatic.com/s/robotomono/v5/L0x5DF4xlVMF-BfR8bXMIjhGq3-cXbKDO1w.woff2) format("woff2");
+  unicode-range: U+0460-052f, U+1c80-1c88, U+20b4, U+2de0-2dff, U+A640-A69F, U+FE2E-FE2F; }
+
+/* cyrillic */
+@font-face {
+  font-family: 'Roboto Mono';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Roboto Mono"), local("RobotoMono-Regular"), url(https://fonts.gstatic.com/s/robotomono/v5/L0x5DF4xlVMF-BfR8bXMIjhPq3-cXbKDO1w.woff2) format("woff2");
+  unicode-range: U+0400-045f, U+0490-0491, U+04b0-04b1, U+2116; }
+
+/* greek-ext */
+@font-face {
+  font-family: 'Roboto Mono';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Roboto Mono"), local("RobotoMono-Regular"), url(https://fonts.gstatic.com/s/robotomono/v5/L0x5DF4xlVMF-BfR8bXMIjhHq3-cXbKDO1w.woff2) format("woff2");
+  unicode-range: U+1f00-1fff; }
+
+/* greek */
+@font-face {
+  font-family: 'Roboto Mono';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Roboto Mono"), local("RobotoMono-Regular"), url(https://fonts.gstatic.com/s/robotomono/v5/L0x5DF4xlVMF-BfR8bXMIjhIq3-cXbKDO1w.woff2) format("woff2");
+  unicode-range: U+0370-03ff; }
+
+/* vietnamese */
+@font-face {
+  font-family: 'Roboto Mono';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Roboto Mono"), local("RobotoMono-Regular"), url(https://fonts.gstatic.com/s/robotomono/v5/L0x5DF4xlVMF-BfR8bXMIjhEq3-cXbKDO1w.woff2) format("woff2");
+  unicode-range: U+0102-0103, U+0110-0111, U+1ea0-1ef9, U+20ab; }
+
+/* latin-ext */
+@font-face {
+  font-family: 'Roboto Mono';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Roboto Mono"), local("RobotoMono-Regular"), url(https://fonts.gstatic.com/s/robotomono/v5/L0x5DF4xlVMF-BfR8bXMIjhFq3-cXbKDO1w.woff2) format("woff2");
+  unicode-range: U+0100-024f, U+0259, U+1-1eff, U+2020, U+20a0-20ab, U+20ad-20cf, U+2113, U+2c60-2c7f, U+A720-A7FF; }
+
+/* latin */
+@font-face {
+  font-family: 'Roboto Mono';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Roboto Mono"), local("RobotoMono-Regular"), url(https://fonts.gstatic.com/s/robotomono/v5/L0x5DF4xlVMF-BfR8bXMIjhLq3-cXbKD.woff2) format("woff2");
+  unicode-range: U+0000-00ff, U+0131, U+0152-0153, U+02bb-02bc, U+02c6, U+02da, U+02dc, U+2000-206f, U+2074, U+20ac, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD; }
+
+/* cyrillic-ext */
+@font-face {
+  font-family: 'Roboto Mono';
+  font-style: normal;
+  font-weight: 700;
+  src: local("Roboto Mono Bold"), local("RobotoMono-Bold"), url(https://fonts.gstatic.com/s/robotomono/v5/L0xkDF4xlVMF-BfR8bXMIjDwjmq8f7-pAVU_Lrg.woff2) format("woff2");
+  unicode-range: U+0460-052f, U+1c80-1c88, U+20b4, U+2de0-2dff, U+A640-A69F, U+FE2E-FE2F; }
+
+/* cyrillic */
+@font-face {
+  font-family: 'Roboto Mono';
+  font-style: normal;
+  font-weight: 700;
+  src: local("Roboto Mono Bold"), local("RobotoMono-Bold"), url(https://fonts.gstatic.com/s/robotomono/v5/L0xkDF4xlVMF-BfR8bXMIjDwjmq1f7-pAVU_Lrg.woff2) format("woff2");
+  unicode-range: U+0400-045f, U+0490-0491, U+04b0-04b1, U+2116; }
+
+/* greek-ext */
+@font-face {
+  font-family: 'Roboto Mono';
+  font-style: normal;
+  font-weight: 700;
+  src: local("Roboto Mono Bold"), local("RobotoMono-Bold"), url(https://fonts.gstatic.com/s/robotomono/v5/L0xkDF4xlVMF-BfR8bXMIjDwjmq9f7-pAVU_Lrg.woff2) format("woff2");
+  unicode-range: U+1f00-1fff; }
+
+/* greek */
+@font-face {
+  font-family: 'Roboto Mono';
+  font-style: normal;
+  font-weight: 700;
+  src: local("Roboto Mono Bold"), local("RobotoMono-Bold"), url(https://fonts.gstatic.com/s/robotomono/v5/L0xkDF4xlVMF-BfR8bXMIjDwjmqyf7-pAVU_Lrg.woff2) format("woff2");
+  unicode-range: U+0370-03ff; }
+
+/* vietnamese */
+@font-face {
+  font-family: 'Roboto Mono';
+  font-style: normal;
+  font-weight: 700;
+  src: local("Roboto Mono Bold"), local("RobotoMono-Bold"), url(https://fonts.gstatic.com/s/robotomono/v5/L0xkDF4xlVMF-BfR8bXMIjDwjmq-f7-pAVU_Lrg.woff2) format("woff2");
+  unicode-range: U+0102-0103, U+0110-0111, U+1ea0-1ef9, U+20ab; }
+
+/* latin-ext */
+@font-face {
+  font-family: 'Roboto Mono';
+  font-style: normal;
+  font-weight: 700;
+  src: local("Roboto Mono Bold"), local("RobotoMono-Bold"), url(https://fonts.gstatic.com/s/robotomono/v5/L0xkDF4xlVMF-BfR8bXMIjDwjmq_f7-pAVU_Lrg.woff2) format("woff2");
+  unicode-range: U+0100-024f, U+0259, U+1-1eff, U+2020, U+20a0-20ab, U+20ad-20cf, U+2113, U+2c60-2c7f, U+A720-A7FF; }
+
+/* latin */
+@font-face {
+  font-family: 'Roboto Mono';
+  font-style: normal;
+  font-weight: 700;
+  src: local("Roboto Mono Bold"), local("RobotoMono-Bold"), url(https://fonts.gstatic.com/s/robotomono/v5/L0xkDF4xlVMF-BfR8bXMIjDwjmqxf7-pAVU_.woff2) format("woff2");
+  unicode-range: U+0000-00ff, U+0131, U+0152-0153, U+02bb-02bc, U+02c6, U+02da, U+02dc, U+2000-206f, U+2074, U+20ac, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD; }
+
+.m0 {
+  margin: 0; }
+
+.mt0 {
+  margin-top: 0; }
+
+.mb0 {
+  margin-bottom: 0; }
+
+.mmt10 {
+  margin-top: 10px; }
+  @media screen and (min-width: 576px) {
+    .mmt10 {
+      margin-top: 0; } }
+
+.mmt25 {
+  margin-top: 25px; }
+  @media screen and (min-width: 576px) {
+    .mmt25 {
+      margin-top: 0; } }
+
+.mmt50 {
+  margin-top: 50px; }
+  @media screen and (min-width: 576px) {
+    .mmt50 {
+      margin-top: 0; } }
+
+.mmt75 {
+  margin-top: 75px; }
+  @media screen and (min-width: 576px) {
+    .mmt75 {
+      margin-top: 0; } }
+
+.mmt100 {
+  margin-top: 100px; }
+  @media screen and (min-width: 576px) {
+    .mmt100 {
+      margin-top: 0; } }
+
+.mmb10 {
+  margin-bottom: 10px; }
+  @media screen and (min-width: 576px) {
+    .mmb10 {
+      margin-bottom: 0; } }
+
+.mmb25 {
+  margin-bottom: 25px; }
+  @media screen and (min-width: 576px) {
+    .mmb25 {
+      margin-bottom: 0; } }
+
+.mmb50 {
+  margin-bottom: 50px; }
+  @media screen and (min-width: 576px) {
+    .mmb50 {
+      margin-bottom: 0; } }
+
+.mmb75 {
+  margin-bottom: 75px; }
+  @media screen and (min-width: 576px) {
+    .mmb75 {
+      margin-bottom: 0; } }
+
+.mmb100 {
+  margin-bottom: 100px; }
+  @media screen and (min-width: 576px) {
+    .mmb100 {
+      margin-bottom: 0; } }
+
+.mpt10 {
+  padding-top: 10px; }
+  @media screen and (min-width: 576px) {
+    .mpt10 {
+      padding-top: 0; } }
+
+.mpt25 {
+  padding-top: 25px; }
+  @media screen and (min-width: 576px) {
+    .mpt25 {
+      padding-top: 0; } }
+
+.mpt50 {
+  padding-top: 50px; }
+  @media screen and (min-width: 576px) {
+    .mpt50 {
+      padding-top: 0; } }
+
+.mpt75 {
+  padding-top: 75px; }
+  @media screen and (min-width: 576px) {
+    .mpt75 {
+      padding-top: 0; } }
+
+.mpt100 {
+  padding-top: 100px; }
+  @media screen and (min-width: 576px) {
+    .mpt100 {
+      padding-top: 0; } }
+
+.mpb10 {
+  padding-bottom: 10px; }
+  @media screen and (min-width: 576px) {
+    .mpb10 {
+      padding-bottom: 0; } }
+
+.mpb25 {
+  padding-bottom: 25px; }
+  @media screen and (min-width: 576px) {
+    .mpb25 {
+      padding-bottom: 0; } }
+
+.mpb50 {
+  padding-bottom: 50px; }
+  @media screen and (min-width: 576px) {
+    .mpb50 {
+      padding-bottom: 0; } }
+
+.mpb75 {
+  padding-bottom: 75px; }
+  @media screen and (min-width: 576px) {
+    .mpb75 {
+      padding-bottom: 0; } }
+
+.mpb100 {
+  padding-bottom: 100px; }
+  @media screen and (min-width: 576px) {
+    .mpb100 {
+      padding-bottom: 0; } }
+
+@media screen and (min-width: 576px) {
+  .mt10 {
+    margin-top: 10px; }
+  .mt25 {
+    margin-top: 25px; }
+  .mt50 {
+    margin-top: 50px; }
+  .mt75 {
+    margin-top: 75px; }
+  .mt100 {
+    margin-top: 100px; }
+  .mt150 {
+    margin-top: 150px; }
+  .mt200 {
+    margin-top: 200px; }
+  .mb10 {
+    margin-bottom: 10px; }
+  .mb15 {
+    margin-bottom: 15px; }
+  .mb25 {
+    margin-bottom: 25px; }
+  .mb50 {
+    margin-bottom: 50px; }
+  .mb75 {
+    margin-bottom: 75px; }
+  .mb100 {
+    margin-bottom: 100px; }
+  .pt10 {
+    padding-top: 10px; }
+  .pt25 {
+    padding-top: 25px; }
+  .pt50 {
+    padding-top: 50px; }
+  .pt75 {
+    padding-top: 75px; }
+  .pt100 {
+    padding-top: 100px; }
+  .pt125 {
+    padding-top: 125px; }
+  .pt150 {
+    padding-top: 150px; }
+  .pt175 {
+    padding-top: 175px; }
+  .pt200 {
+    padding-top: 200px; }
+  .pb10 {
+    padding-bottom: 10px; }
+  .pb25 {
+    padding-bottom: 25px; }
+  .pb50 {
+    padding-bottom: 50px; }
+  .pb75 {
+    padding-bottom: 75px; }
+  .pb100 {
+    padding-bottom: 100px; }
+  .pb150 {
+    padding-bottom: 150px; }
+  .pb200 {
+    padding-bottom: 200px; } }
+
+@media screen and (min-width: 576px) {
+  .hide-desktop {
+    display: none; } }
+
+.hide-mobile {
+  display: none; }
+  @media screen and (min-width: 576px) {
+    .hide-mobile {
+      display: block; } }
 
 header {
   padding: 12px;
-  border-bottom: 1px solid #eee; }
+  border-bottom: 1px solid #eee;
+  background: white; }
 
 .header-container {
   display: -webkit-box;
@@ -21,11 +342,17 @@ header {
           align-items: center; }
 
 .header-logo {
-  width: 50px; }
+  width: 100px; }
+  @media screen and (min-width: 576px) {
+    .header-logo {
+      width: 150px; } }
 
 .header-nav a {
   display: inline-block;
-  margin: 0 5px; }
+  margin: 0 15px;
+  font-family: "Roboto Mono", monospace; }
+  .header-nav a:nth-last-child(1) {
+    margin-right: 0; }
 
 .index-container {
   height: calc(100vh - 75px);
@@ -46,7 +373,9 @@ header {
     margin-bottom: 0; }
 
 .body-logo {
-  width: 280px; }
+  width: 90%;
+  max-width: 480px;
+  margin-bottom: 30px; }
 
 .index-nav a {
   display: inline-block;
@@ -54,10 +383,13 @@ header {
 
 body {
   margin: 0;
-  font-size: 14px;
   font-family: "Lato", sans-serif;
   color: #333; }
 
 a {
   color: #00b7ff;
   text-decoration: none; }
+
+.container {
+  max-width: 1170px;
+  margin: 0 auto; }
