Fix small header render bug for multi-long urls.

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,6 +1,6 @@
 <header>
     <div class="container header-container">
-        <a href="/"><img class="header-logo" src="img/cc-voyager-logo.svg" alt="Chris Courses' Voyager Logo"></a>
+        <a href="/"><img class="header-logo" src="/img/cc-voyager-logo.svg" alt="Chris Courses' Voyager Logo"></a>
         <nav class="header-nav">
             <a href="/">Home</a>
         </nav>
