--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,9 +1,20 @@
 <div class="container index-container text-center">
     <img class="body-logo" src="img/cc-voyager.svg" alt="Chris Courses' Voyager Logo">
 
+    <h3>Resources</h3>
     <nav class="index-nav">
-        <a href="https://github.com/chriscourses/voyager" target="_blank">Git Repo</a>
-        <a href="http://voyager.chriscourses.com/" target="_blank">Docs</a>
-        <a href="http://chriscourses.com/" target="_blank">Free Learning Videos</a>
+        <p class="m0">
+            <a href="https://github.com/chriscourses/voyager" target="_blank">Git Repo</a>
+            <a href="http://chriscourses.com/" target="_blank">Free Learning Videos</a>
+        </p>
+    </nav>
+
+    <nav class="index-nav">
+        <p>
+            <a href="https://www.youtube.com/c/chriscourses" target="_blank">YouTube</a>
+            <a href="https://www.instagram.com/chriscourses/" target="_blank">Instagram</a>
+            <a href="https://www.facebook.com/chriscourses" target="_blank">Facebook</a>
+            <a href="http://twitter.com/chriscourses" target="_blank">Twitter</a> 
+        </p>
     </nav>
 </div>
